--- a/moshmosh/package.json
+++ b/moshmosh/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "format": "prettier --write './src/**/*.{js,ts,jsx,tsx}'"
   },
   "dependencies": {
     "@types/node": "20.6.3",
