--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -2,18 +2,18 @@
 FROM node:18.18.0 AS build
 WORKDIR /app/
 COPY moshmosh/package.json moshmosh/yarn.lock ./ 
-RUN yarn install
+RUN yarn install --production=false
 COPY ./moshmosh .
 RUN yarn build
 
 # 実行ステージ
-FROM gcr.io/distroless/nodejs
+FROM gcr.io/distroless/nodejs:18
 WORKDIR /app
 COPY --from=build /app/.next /app/.next
 COPY --from=build /app/package.json /app/yarn.lock /app/
 COPY --from=build /app/node_modules /app/node_modules
 COPY --from=build /app/public /app/public
-EXPOSE 3000
+COPY --from=build /app/next.config.js /app/next.config.js
 
 # Next.jsの起動
 CMD ["node_modules/next/dist/bin/next", "start"]
