--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -1,5 +1,10 @@
 name: reviewdog
 on: [pull_request]
+
+defaults:
+  run:
+    working-directory: moshmosh
+
 jobs:
   eslint:
     name: runner / eslint
@@ -13,4 +18,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review
-          eslint_flags: "moshmosh/src/**/*.{ts,tsx}" # srcのパスを修正
+          eslint_flags: "src/**/*.{ts,tsx}" # srcのパスを修正
