--- a/.github/workflows/build-and-test-on-push.yml
+++ b/.github/workflows/build-and-test-on-push.yml
@@ -31,3 +31,14 @@ jobs:
       - name: Run lint
         run: yarn lint
         working-directory: moshmosh
+      - name: Run format
+        run: yarn format
+        working-directory: moshmosh
+      - name: Run Prettier # prettier自体を実行
+        run: |
+          npm ci
+          npx prettier --write ${{ env.GIT_DIFF_FILTERED }} # 環境変数GIT_DIFF_FILTEREDに差分のあるファイルが列挙されている
+        if: env.GIT_DIFF
+      - uses: stefanzweifel/git-auto-commit-action@v4 # フォーマットしたファイルをコミット
+        with:
+          commit_message: Apply Prettier Change
