--- a/.github/workflows/build-and-test-on-push.yml
+++ b/.github/workflows/build-and-test-on-push.yml
@@ -40,3 +40,7 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4 # フォーマットしたファイルをコミット
         with:
           commit_message: Apply Prettier Change
+          - name: Run test
+          run: yarn run test
+          working-directory: moshmosh
+  
