--- a/.github/workflows/build-and-test-on-push.yml
+++ b/.github/workflows/build-and-test-on-push.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Calculate cache key
         id: cache-key
-        run: echo "::set-output name=key::${{ runner.os }}-yarn-${{ hashFiles('moshmosh/package.json', 'moshmosh/yarn.lock') }}"
+        run: echo "cache-key=${{ runner.os }}-yarn-${{ hashFiles('moshmosh/package.json', 'moshmosh/yarn.lock') }}" >> $GITHUB_ENV
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
