--- a/.github/workflows/build-and-test-on-push.yml
+++ b/.github/workflows/build-and-test-on-push.yml
@@ -76,3 +76,11 @@ jobs:
       - name: Run test
         run: yarn run test
         working-directory: moshmosh
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Docker Prod Build
+        run: docker build -f Dockerfile.prod .
